# Superpositeur

./: .gitignore  CMakeLists.txt  README.md  index.html  setup.py
.github/workflows/: test.yml
include/superpositeur/: API.hpp  Circuit.hpp  CircuitInstruction.hpp  Common.hpp  DefaultOperations.hpp  GivensRotation.hpp  LibqasmInterface.hpp  Matrix.hpp  MatrixSparseVectorMultiplication.hpp  MixedState.hpp  Operations.hpp  SparseVectorSort.hpp
include/superpositeur/cli/: SuperpositeurCLISession.hpp
include/superpositeur/config/: CompileTimeConfiguration.hpp
include/superpositeur/utils/: BitSet.hpp  FloatComparison.hpp  TaggedInteger.hpp
python/: PythonAPI.cpp
src/superpositeur/: API.cpp  CircuitInstruction.cpp  LibqasmInterface.cpp  MixedState.cpp  Operations.cpp
src/superpositeur/cli/: SuperpositeurCLISession.cpp
test/: BitSetTest.cpp  CMakeLists.txt  GivensRotationTest.cpp  IntegrationTest.cpp  MatrixSparseVectorMultiplicationTest.cpp  MatrixTest.cpp  MixedStateTest.cpp  OperandPermutationTest.cpp  SparseVectorSortTest.cpp
test/circuits/: bell_pair.qc
test/circuits/tutorial/: q17.qasm  q=17_s=983_2qbf=031_1.qc  qft.qasm  qft.qc  run_q17_qiskit.py  run_qft_qiskit.py
test/python/: QiskitRandomCircuitGeneration.py  RandomizedIntegrationTest.py  test_randomized_circuit.py
test/randomized/: 10_10_2_100_0_50.cpp  10_15_2_70_0_50.cpp  10_20_2_70_0_50.cpp  13_200_1_0_50_50.cpp  15_1000_1_0_50_50.cpp  15_2000_1_0_50_50.cpp  16_1000_1_0_50_50.cpp  16_2000_1_0_50_50.cpp  17_1000_1_0_50_50.cpp  17_2000_1_0_50_50.cpp  18_1000_1_0_50_50.cpp  20_1000_1_0_50_50.cpp  3_3_2_100_30_20.cpp  3_3_2_10_30_80.cpp  3_4_2_100_30_20.cpp  3_5_2_100_30_20.cpp  4_3_2_10_30_80.cpp  5_100_1_0_50_50.cpp  5_3_2_10_30_80.cpp  6_5_2_100_0_0.cpp  8_10_2_10_30_80.cpp  8_10_2_30_30_30.cpp  8_15_2_10_30_80.cpp  8_20_2_10_30_80.cpp  8_20_2_30_30_30.cpp  8_30_2_30_30_30.cpp  8_40_2_30_30_30.cpp  8_60_2_30_30_30.cpp  8_8_2_100_0_0.cpp  9_12_2_100_0_0.cpp  9_15_2_100_0_50.cpp  regenerate.py
wasm/: README.md  demo.html  demo.js  libsuperpositeur.js  libsuperpositeur.wasm  superpositeur-cli.html  superpositeur-cli.js  superpositeur-cli.wasm
